@@ -4,6 +4,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fixed a bug for when a resource_list has been set, but isn't completely
       initialized, causing a segfault
   b - stop counting down walltime remaining after a job is completed
+  b - correctly display the number for tasks as used in TORQUE in qstat -a output
 
 2.4.6
   f - added an asynchronous option for qsig, specified with -a.
